Fix crosshair not showing up in uploaded version Cursor no longer shows up when it's not supposed to Now that the cursor is fully bound to the game, we have to keep track of our own constrained cursor position

--- a/code/ui/Crosshair.razor.scss
+++ b/code/ui/Crosshair.razor.scss
@@ -7,7 +7,7 @@ Crosshair {
     image {
         width: 80px;
         aspect-ratio: 1;
-        background-image: url(/source/crosshair.png);
+        background-image: url(source/ui/crosshair.png);
         background-size: 100%;
     }
 }
